[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/screens/MainScreen.gd" type="Script" id=1]
[ext_resource path="res://game/screens/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/ui/AppSplash.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/ui/MenuSfx.tscn" type="PackedScene" id=4]

[node name="MainScreen" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="MainMenu" parent="." instance=ExtResource( 2 )]

[node name="AppSplash" parent="." instance=ExtResource( 3 )]

[node name="App" type="Control" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Mouse" ]

[node name="MenuSfx" parent="." instance=ExtResource( 4 )]

[connection signal="app_run" from="MainMenu" to="." method="_on_MainMenu_app_run"]
